gate: Allow to have a .swifty.yml file in repo describing it
